# sideproject

./: CMakeLists.txt  README.md
.devcontainer/: Dockerfile
cmake/: External_boost.cmake  External_downloads.cmake  Project_status.cmake
cpp_router/: CMakeLists.txt
cpp_router/src/: CMakeLists.txt  main.cpp  router.cpp  router.hpp
cpp_router/test/: CMakeLists.txt
cpp_status/: CMakeLists.txt
cpp_status/src/: CMakeLists.txt  main.cpp  status.cpp  status.hpp
cpp_status/test/: CMakeLists.txt
